# android-14-public

./: README.md
frameworks/av/camera/: Android.bp  CameraUtils.cpp
frameworks/proto_logging/stats/: Android.bp  atoms.proto
hardware/aic/: device-aic.mk
hardware/aic/libbt/: Android.mk
hardware/bes/bluetooth/: Android.mk  android_bluetooth_porting_guide.docx
hardware/broadcom/wlan/: OWNERS
hardware/interfaces/compatibility_matrices/: Android.bp
hardware/realtek/rtkbt/: rtkbt.mk
hardware/rockchip/audio/: Android.mk
hardware/rockchip/bootctrl/: Android.bp  rk_boot_control.h
hardware/rockchip/camera/: Android.bp  Android.mk
hardware/rockchip/fastbootd/: Android.bp  android.hardware.fastboot-service.rockchip_recovery.rc
hardware/rockchip/gatekeeper/: Android.bp  android.hardware.gatekeeper-service.optee.rc  optee_gatekeeper.h  service.cpp  version.txt
hardware/rockchip/gnss/: Android.bp  Gnss.cpp  Gnss.h  gnss-rk.rc
hardware/rockchip/hdmicec/: Android.bp  Android.go  hdmi_cec.cpp  hdmi_connection.cpp  hdmi_connection_event.cpp  hdmicec.h  hdmicec_event.cpp  rk_hdmi_cec.h  rk_hdmi_connection.h
hardware/rockchip/health/: Android.bp  android.hardware.health-service.rockchip.rc  android.hardware.health-service.rockchip_recovery.rc
hardware/rockchip/hw_output/: Android.bp  Android.go  hw_output.cpp  hw_output.h  hw_types.h  rk_hwc_proxy_client.cpp  rk_hwc_proxy_client.h
hardware/rockchip/hwc_proxy_service/: Android.bp  hwc_proxy_service.mk
hardware/rockchip/keymaster4/: Android.bp  keymint_service.cpp  version.txt
hardware/rockchip/libhwjpeg/: Android.bp  readme.txt
hardware/rockchip/libiep/: Android.bp
hardware/rockchip/libmpimmz/: Android.bp  version.h
hardware/rockchip/libpq/: Android.bp  libpq.mk  src.go
hardware/rockchip/libsvep/libsvepsr/examples/sr-demo/: Android.mk  CMakeLists.txt  README.md  build.sh
hardware/rockchip/libsvep/libsvepsr/examples/sr-demo/include/: AsyncWorker.h  worker.h
hardware/rockchip/libsvep/libsvepsr/examples/sr-demo/src/: AsyncWorker.cpp  main.cpp  worker.cpp
hardware/rockchip/libsvep/libsvepsr/tools/vendor-storage-test/: CMakeLists.txt  build.sh  env_android.sh  env_linux.sh
hardware/rockchip/libvdpp/: Android.bp
hardware/rockchip/libvendor_storage/: Android.bp  vendor_storage.c  vendor_storage.h  vendor_storage_test.c
hardware/rockchip/libvisionpq/: Android.mk  Readme.md
hardware/rockchip/light_aidl/: Android.bp  Lights.cpp  Lights.h
hardware/rockchip/optee/: Android.bp
hardware/rockchip/power_aidl/: Android.bp  Power.cpp  Power.h  PowerHintSession.cpp  PowerHintSession.h  main.cpp
hardware/rockchip/rvcam/: Android.bp  CleanSpec.mk  init.rvcam.u.rc  rvcam_config.mk  rvcam_device.mk  ueventd.rvcam.rc
hardware/rockchip/sensor/: Android.bp  InputEventReader.cpp  Sensor.cpp  Sensors.cpp  sensors-rockchip.rc
hardware/rockchip/thermal/: Android.bp  Thermal.cpp  Thermal.h  ThermalImpl.cpp  ThermalImpl.h  ThermalWatcher.cpp  ThermalWatcher.h  android.hardware.thermal-service.rockchip.rc  main.cpp  thermal_map_table.h  thermal_map_table_type.h
hardware/rockchip/tv_input/: Android.bp  HinDev.h  HinDevImpl.cpp  TvDeviceV4L2Event.cpp  tv_input.cpp
hardware/rockchip/vman_module/: Android.mk  PqModule.cpp  (+10 more)
(+918 files in other folders)
